--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    
-    
+    <meta name="description" content="Web site created using create-react-app"/>
+
+    <script src="https://kit.fontawesome.com/df0b00fe58.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
+
     <title>Jolly Lube</title>
   </head>
   <body>
